[gd_scene load_steps=4 format=2]

[ext_resource path="res://AnimalKinematic.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[node name="Animal" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
color = Color( 0.0313726, 0.498039, 0.498039, 1 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="Circle" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
